080915 cs  trend     Zero Multiple attribute in DsTrend object caused termination of rt_trend.
081015 cs  pwrs      New volume class, DetachedClassVolume, added.
081015 cs  convert   Conversion of .png files to postscript didn't work.
081015 cs  convert   Font TimesNewRoman changed to Times-Roman in postscript generation (TimesNewRoman doesn't seems to be known by all printers).
081016 rk  rt        Changed plc-handling so cycletimes faster tha 1 ms is possible.
081017 rk  rt        Added a few new enumeration types to pwrb (YesNo, TrueFalse).
081022 cs  convert   Xtthelp bookmark on header didn't work after html conversion.
081024 cs  xtthelp   New program co_help to view helptexts.
081124 cs  qcom      Quota check for max number of buffered messages in a queue added.
090224 cs  xtthelp   New home button in help window.
090506 cs  pwrb      Bugfix in Max object. Default values were wrong and didn't work for negative input values.
090519 cs  rtmon     New help file for runtime monitor, and pushbutton for reset runtime.
090527 cs  doc       Getting Started Guide updated.
090827 cs  convert   Bugfix in conversion of png-files to ps and pdf.
090827 cs  doc       New Operator's Guide.
090827 cs  co        Window to view a text added to wow.
090902 cs  trace     Translation of menu to swedish.
090909 cs  script    New scriptfunction get get the current language, get_language().
090909 cs  plc       New enumeration type for OpMode in PID mode objects.
090916 cs  wbl       User and RttConfig merged into OpPlace object. User and RttConfig is now obsolete.
090916 cs  linksup   SystemStatus attribute in NodeLinkSup object contains system status of supervised node.
091005 cs  gdh       Bugfix in DetachedVolume. Attaching objects on a remote node didn't work.
091005 cs  statusmon Change node dialog and language support added. Some documentation.
091014 cs  doc       Links in Designer's Guide updated and code format added in html version.